--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,17 @@
             <li><a href="contact.asp">Dzieci</a></li>
         </ul>
     </nav>
-    <main id="app"></main>
+    <main class="main">
+        <div class="photo-grid">
+            <img class="big-grid" src="images/pictures/m08.jpg" />
+            <img src="images/pictures/w01.jpg" />
+            <img src="images/pictures/bs01.jpg" />
+            <img src="images/pictures/a03.jpg" />
+            <img src="images/pictures/m06.jpg" />
+            <img src="images/pictures/m05.jpg" />
+        </div>
+    </main>
+    <div id="app"></div>
 </body>
 
 </html>
