styling in progress

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,16 @@
 
 <body>
     <nav class="navbar">
-        <img src="images/mik-logo.svg" alt="MIK logo" />
+        <div class="navbar-first">
+            <div class="navbar-first-left">
+                Contact
+            </div>
+            <img src="images/mik-logo.svg" alt="MIK logo" />
+
+            <div class="navbar-first-right">
+                <input />
+            </div>
+        </div>
 
         <ul>
             <li><a href="default.asp">Mężczyzna</a></li>
