--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Skarpety MIK</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <div class="navbar-first">
-            <div class="navbar-first-left">
-                Contact
-            </div>
-            <img src="images/mik-logo.svg" alt="MIK logo" />
-
-            <div class="navbar-first-right">
-                <input />
-            </div>
+      <div class="navbar-first">
+        <div class="navbar-first-left">
+          Contact
         </div>
+        <img src="images/mik-logo.svg" alt="MIK logo" />
 
-        <ul>
-            <li><a href="default.asp">Mężczyzna</a></li>
-            <li><a href="news.asp">Kobieta</a></li>
-            <li><a href="about.asp">Nowości</a></li>
-            <li><a href="contact.asp">Dzieci</a></li>
-        </ul>
+        <div class="navbar-first-right">
+          <img src="images/icons/Search.svg" alt="Search Icon" />
+          <input />
+        </div>
+      </div>
+
+      <ul>
+        <li><a href="default.asp">Mężczyzna</a></li>
+        <li><a href="news.asp">Kobieta</a></li>
+        <li><a href="about.asp">Nowości</a></li>
+        <li><a href="contact.asp">Dzieci</a></li>
+      </ul>
     </nav>
     <main class="main">
-        <div class="photo-grid">
-            <img class="big-grid" src="images/pictures/m08.jpg" />
-            <img src="images/pictures/w01.jpg" />
-            <img src="images/pictures/bs01.jpg" />
-            <img src="images/pictures/a03.jpg" />
-            <img src="images/pictures/m06.jpg" />
-            <img src="images/pictures/m05.jpg" />
-        </div>
+      <div class="photo-grid">
+        <img class="big-grid" src="images/pictures/m08.jpg" />
+        <img src="images/pictures/w01.jpg" />
+        <img src="images/pictures/bs01.jpg" />
+        <img src="images/pictures/a03.jpg" />
+        <img src="images/pictures/m06.jpg" />
+        <img src="images/pictures/m05.jpg" />
+      </div>
     </main>
     <div id="app"></div>
-</body>
-
+  </body>
 </html>
