--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
         <img src="images/pictures/m06.jpg" />
         <img src="images/pictures/m05.jpg" />
       </div>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum tenetur
+      voluptatum quaerat perspiciatis excepturi, deserunt tempora similique.
+      Omnis iure suscipit expedita obcaecati rerum numquam cum eius ab placeat
+      eum maiores, deleniti accusamus quidem ad. Autem fugiat quod saepe
+      molestiae ullam.
     </main>
   </body>
 </html>
